; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hyperv/netvsc/extr_hn_rndis.c_hn_rndis_get_eaddr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hyperv/netvsc/extr_hn_rndis.c_hn_rndis_get_eaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hn_softc = type { i32 }

@ETHER_ADDR_LEN = common dso_local global i64 0, align 8
@OID_802_3_PERMANENT_ADDRESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"invalid eaddr len %zu\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hn_rndis_get_eaddr(%struct.hn_softc* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hn_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.hn_softc* %0, %struct.hn_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i64, i64* @ETHER_ADDR_LEN, align 8
  store i64 %8, i64* %6, align 8
  %9 = load %struct.hn_softc*, %struct.hn_softc** %4, align 8
  %10 = load i32, i32* @OID_802_3_PERMANENT_ADDRESS, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @hn_rndis_query(%struct.hn_softc* %9, i32 %10, i32* null, i32 0, i32* %11, i64* %6)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %7, align 4
  store i32 %16, i32* %3, align 4
  br label %29

17:                                               ; preds = %2
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* @ETHER_ADDR_LEN, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %17
  %22 = load %struct.hn_softc*, %struct.hn_softc** %4, align 8
  %23 = getelementptr inbounds %struct.hn_softc, %struct.hn_softc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i64, i64* %6, align 8
  %26 = call i32 @if_printf(i32 %24, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %25)
  %27 = load i32, i32* @EINVAL, align 4
  store i32 %27, i32* %3, align 4
  br label %29

28:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %21, %15
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @hn_rndis_query(%struct.hn_softc*, i32, i32*, i32, i32*, i64*) #1

declare dso_local i32 @if_printf(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
